# info-api

./: .gitignore  Cargo.toml  Dockerfile
src/: lib.rs  main.rs
src/education/: mod.rs
src/gitub_api/: mod.rs
src/job_experience/: mod.rs
src/query/: mod.rs
src/technical_skills/: mod.rs
