[package]
name = "info-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-graphql = "5.0.6"
async-graphql-poem = "5.0.6"
dotenv = "0.15.0"
firebase-admin-auth-rs = "0.1.0"
firestore = "0.28.0"
futures = "0.3.26"
gql_client = "1.0.7"
juniper = "0.15.11"
poem = "1.3.54"
serde = "1.0.152"
serde_derive = "1.0.152"
tokio = "1.25.0"
